package com.comidasrapidas.model;

public enum Rol {
    ADMINISTRADOR, CAJERO
}

