-- Instalación idempotente para una base dedicada a esta aplicación.
CREATE TABLE IF NOT EXISTS usuario (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL CHECK (btrim(nombre) <> ''),
    username VARCHAR(60) NOT NULL UNIQUE CHECK (username = lower(btrim(username)) AND username <> ''),
    password VARCHAR(100) NOT NULL,
    rol VARCHAR(20) NOT NULL CHECK (rol IN ('ADMINISTRADOR', 'CAJERO')),
    activo BOOLEAN NOT NULL DEFAULT TRUE
);
CREATE TABLE IF NOT EXISTS cliente (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tipo_documento VARCHAR(20) NOT NULL CHECK (btrim(tipo_documento) <> ''),
    numero_documento VARCHAR(30) NOT NULL UNIQUE CHECK (btrim(numero_documento) <> ''),
    nombre VARCHAR(100) NOT NULL CHECK (btrim(nombre) <> ''),
    apellido VARCHAR(100) NOT NULL DEFAULT '',
    telefono VARCHAR(30) NOT NULL DEFAULT '',
    correo VARCHAR(150) NOT NULL DEFAULT '',
    activo BOOLEAN NOT NULL DEFAULT TRUE
);
CREATE TABLE IF NOT EXISTS categoria (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(80) NOT NULL CHECK (btrim(nombre) <> ''),
    activo BOOLEAN NOT NULL DEFAULT TRUE
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_categoria_nombre ON categoria (lower(nombre));
CREATE TABLE IF NOT EXISTS producto (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL CHECK (btrim(nombre) <> ''),
    descripcion VARCHAR(500) NOT NULL DEFAULT '',
    precio NUMERIC(14,2) NOT NULL CHECK (precio > 0),
    stock INTEGER NOT NULL CHECK (stock >= 0),
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    categoria_id BIGINT NOT NULL REFERENCES categoria(id)
);
CREATE INDEX IF NOT EXISTS ix_producto_categoria ON producto(categoria_id);
CREATE TABLE IF NOT EXISTS venta (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fecha_hora TIMESTAMPTZ NOT NULL,
    total NUMERIC(14,2) NOT NULL CHECK (total > 0),
    cliente_id BIGINT REFERENCES cliente(id),
    usuario_id BIGINT NOT NULL REFERENCES usuario(id)
);
CREATE INDEX IF NOT EXISTS ix_venta_fecha ON venta(fecha_hora);
CREATE INDEX IF NOT EXISTS ix_venta_cliente ON venta(cliente_id);
CREATE INDEX IF NOT EXISTS ix_venta_usuario ON venta(usuario_id);
CREATE TABLE IF NOT EXISTS detalle_venta (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    venta_id BIGINT NOT NULL REFERENCES venta(id),
    producto_id BIGINT NOT NULL REFERENCES producto(id),
    cantidad INTEGER NOT NULL CHECK (cantidad > 0),
    precio_unitario NUMERIC(14,2) NOT NULL CHECK (precio_unitario > 0),
    subtotal NUMERIC(14,2) NOT NULL CHECK (subtotal = cantidad * precio_unitario),
    UNIQUE (venta_id, producto_id)
);
CREATE INDEX IF NOT EXISTS ix_detalle_producto ON detalle_venta(producto_id);
